@@ -27,6 +27,7 @@
 	<description>AgileRequirementsEngineeringTool</description>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -90,14 +91,15 @@
 					<mainClass>com.example.agile_re_tool.backend.BackendApplication</mainClass>
 				</configuration>
 			</plugin>
-			        <plugin>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
-            <version>0.0.8</version>
-            <configuration>
-                <mainClass>com.example.agile_re_tool.ui.Workspace</mainClass>
-            </configuration>
-        </plugin>
+		        <plugin>
+		            <groupId>org.openjfx</groupId>
+		            <artifactId>javafx-maven-plugin</artifactId>
+		            <version>0.0.8</version>
+		            <configuration>
+	                <mainClass>com.agile.requirements.AgileReToolDesktopApp</mainClass>
+	                <jvmArgs>--enable-native-access=javafx.graphics</jvmArgs>
+		            </configuration>
+		        </plugin>
 		</plugins>
 	</build>
 
